<resources>
    <string name="app_name">Super Run</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="title_activity_device_discover_and_conn">DeviceDiscoverAndConnActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="swm_ble_loading">Loading ... </string>

    <string name="title_activity_splash">SplashActivity</string>
    <string name="swm_logo">SINGULAR WINGS</string>
    <string name="swm_ble_connecting">Connecting ...</string>
    <string name="swm_ble_do_connect">Connect</string>
    <string name="swm_ble_choose_your_device">Choose your device</string>
    <string name="swm_ble_scan">Scanning SWM devices ...</string>
    <string name="swm_ble_turn_on_device">Turn on SWM device</string>
    <string name="swm_cta_ok">OK</string>
    <string name="swm_connect_ble">Connect</string>
    <string name="title_activity_ecg">EcgActivity</string>
    <string name="swm_ecg_label">ECG</string>
    <string name="swm_breath_label">Breath rate</string>
    <string name="swm_wave">Wave</string>
    <string name="swm_data_collect">Collect</string>
    <string name="title_activity_super_run">SUPER RUN</string>
    <string name="swm_run_power">POWER</string>
    <string name="swm_title_motion">SWM Motion</string>
    <string name="swm_gyro_label">Gyro</string>
    <string name="swm_acc_label">A-sensor</string>
    <string name="swm_mag_label">Magnetic</string>
    <string name="swm_engineering_mode">SWM Engineering</string>
    <string name="swm_record">RECORD</string>
    <string name="swm_stop">STOP</string>
    <string name="swm_unknown">- - -</string>
    <string name="swm_cta_training">GO</string>
    <string name="swm_training_course">Training Course</string>
    <string name="swm_basic_training">BASIC TRAINING</string>
    <string name="swm_exp_label">Exp:</string>
    <string name="swm_training_result_index">Result</string>
    <string name="swm_course_effect">Expect result</string>
    <string name="swm_cta_go_training">Go training</string>
    <string name="swm_plus_value">+%1d</string>
    <string name="swm_unknow_power">00</string>
    <string name="swm_power_label">Power:</string>
    <string name="swm_training_description_label">Description</string>
    <string name="swm_training_distance_label">Distance: </string>
    <string name="swm_training_duration_label">Duration: </string>
    <string name="swm_reservation">Schedule a training</string>
    <string name="swm_cta_go">GO</string>
    <string name="swm_cta_got_it">I want it</string>
    <string name="swm_training_descr">Keep training, keep your body active</string>
    <string name="title_activity_training">TrainingActivity</string>
    <string name="swm_disconnect_msg">Turn on your device and get the power</string>
    <string name="swm_service">Super Run</string>
    <string name="swm_status_connected">Connected</string>
    <string name="swm_distance" formatted="false">%1d / <![CDATA[<font color=\'#21ffb1\'>%2d</font>]]> m</string>
    <string name="swm_coach_distance">Distance</string>
    <string name="swm_coach_elapse">Elapse</string>
    <string name="swm_coach_pace">Pace</string>
    <string name="swm_coach_step">Step</string>

    <string name="title_activity_heart">Makiyo</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="swm_heart_rate">Heart Rate</string>
    <string name="swm_max_heart_rate">Max. HR</string>
    <string name="swm_hrv">HRV</string>
    <string name="swm_body_age">Body Age</string>
    <string name="swm_steps">Steps</string>
    <string name="swm_gyro">Gyro</string>
    <string name="swm_heart">Heart rate</string>
    <string name="swm_hr">HR</string>
    <string name="swm_br">BR</string>
    <string name="swm_sign_in_loading">Processing</string>
    <string name="swm_heart_rate_value">%1d bpm</string>
    <string name="title_activity_emergency">Flash</string>
    <string name="swm_flash">Flash</string>
    <string name="swm_flash_sub_title">emergency system</string>
    <string name="title_activity_flash">Flash</string>
    <string name="swm_flash_message">An emergency patient</string>
    <string name="swm_location">(%1$f, %2$f)</string>
    <string name="swm_super_run">SUPER RUN</string>
    <string name="swm_super_run_sub">Run, Health, Fast, Power</string>
    <string name="swm_heart_rate_unit">bpm</string>
    <string name="title_activity_marathon">MarathonActivity</string>

    <string name="title_activity_gender">GenderActivity</string>
    <string name="swm_gps_title">Turn on GPS</string>
    <string name="swm_gps_message">Turn on GPS to calculate your running distance</string>
    <string name="swm_device">SWM device</string>
    <string name="swm_device_address">Device address</string>
    <string name="swm_cta_edit">EDIT</string>
    <string name="swm_warning">Warning</string>
    <string name="swm_remove_device">This will delete device record in your phone and need to rescan device</string>
    <string name="swm_cancel">Cancel</string>
    <string name="swm_cta_continue">Continue</string>
    <string name="swm_pause">Pause</string>
    <string name="swm_i_am_done">I\'m done</string>
    <string name="swm_intensity">Intensity</string>
    <string name="swm_intensity_none">Low</string>
    <string name="swm_intensity_easy">Easy</string>
    <string name="swm_intensity_normal">Normal</string>
    <string name="swm_intensity_strong">Strong</string>
    <string name="swm_intensity_heavy">Heavy</string>
    <string name="swm_intensity_hard">Hard</string>
    <string name="swm_danger">Danger</string>
    <string name="swm_male">M</string>
    <string name="swm_female">F</string>
    <string name="swm_birthday">Birthday</string>
    <string name="swm_gender_and_age_hint">Forever young</string>
    <string name="swm_height">Height</string>
    <string name="swm_weight">Weight</string>
    <string name="swm_height_feet">\'</string>
    <string name="swm_height_inch">\'\'</string>
    <string name="swm_weight_unit">lb</string>
    <string name="swm_body_info_hint">Take a deep breathe, relax and prepare to run</string>
    <string name="swm_gender_label">Gender</string>
    <string name="swm_pick_day">Pick a day</string>
    <string name="swm_sdnn">SDNN</string>
    <string name="swm_rmssd">RMSSD</string>
    <string name="swm_menu_ecg_title">ECG</string>
    <string name="swm_menu_hrv_title">HRV</string>
    <string name="swm_menu_motion_title">Motion</string>
    <string name="swm_menu_ble_title">BLE</string>
    <string name="swm_hrv_frequency">Frequency</string>
    <string name="swm_hrv_poincare">Poincare</string>
    <string name="title_activity_sdnn">SdnnActivity</string>
    <string name="swm_rri">RRI</string>
    <string name="swm_sdnn_and_rmssd">SDNN/RMSSD</string>
    <string name="swm_info">Info</string>
    <string name="swm_app_version_label">App version</string>
    <string name="swm_vlf">VLF</string>
    <string name="swm_lf">LF</string>
    <string name="swm_hf">HF</string>
    <string name="swm_total_power">TP</string>
    <string name="swm_lf_hf_ratio">L/H</string>
    <string name="swm_fw_label">Firmware version</string>
    <string name="swm_manufacture_label">Manufacture</string>
    <string name="swm_skip">Skip</string>
    <string name="swm_my_heart_rate">HR: %1$d.  Max: %2$d.  Min: %3$d</string>
</resources>
