<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/swm_hrv_switch"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <Button
        android:id="@+id/swm_hrv_rri"
        android:layout_width="50dp"
        android:layout_height="30dp"
        android:text="@string/swm_rri"
        android:textColor="@color/swm_white"
        android:background="@drawable/swm_inactive_cta_button"
        android:layout_marginLeft="5dp"
        android:textSize="12dp"
        />
    <Button
        android:id="@+id/swm_hrv_sdnn"
        android:layout_width="50dp"
        android:layout_height="30dp"
        android:text="@string/swm_sdnn"
        android:textColor="@color/swm_white"
        android:background="@drawable/swm_inactive_cta_button"
        android:layout_marginLeft="5dp"
        android:textSize="12dp"
        />
    <Button
        android:id="@+id/swm_hrv_rmssd"
        android:layout_width="50dp"
        android:layout_height="30dp"
        android:text="@string/swm_rmssd"
        android:textColor="@color/swm_white"
        android:background="@drawable/swm_inactive_cta_button"
        android:layout_marginLeft="5dp"
        android:textSize="12dp"
        />
    <Button
        android:id="@+id/swm_hrv_frequency"
        android:layout_width="80dp"
        android:layout_height="30dp"
        android:text="@string/swm_hrv_frequency"
        android:textColor="@color/swm_white"
        android:background="@drawable/swm_inactive_cta_button"
        android:layout_marginLeft="5dp"
        android:textSize="12dp"
        />
    <Button
        android:id="@+id/swm_hrv_poincare"
        android:layout_width="80dp"
        android:layout_height="30dp"
        android:text="@string/swm_hrv_poincare"
        android:textColor="@color/swm_white"
        android:background="@drawable/swm_inactive_cta_button"
        android:layout_marginLeft="5dp"
        android:textSize="12dp"
        />
</LinearLayout>