<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_gender2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.swm.app.superrun.GenderAndAgeActivity"
    android:background="@drawable/swm_main">
    <TextView
        android:id="@+id/swm_gender_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/swm_gender_label"
        android:textSize="20dp"
        android:textColor="@color/swm_white"
        android:layout_centerHorizontal="true"
        />
    <Button
        android:id="@+id/swm_male"
        android:layout_width="100dp"
        android:layout_height="130dp"
        android:text="@string/swm_male"
        android:textColor="@color/swm_white"
        android:gravity="center"
        android:textSize="50dp"
        android:background="@drawable/swm_selectable_button"
        android:layout_marginLeft="30dp"
        android:layout_toStartOf="@+id/swm_gender_label"
        android:layout_below="@id/swm_gender_label"
        android:layout_marginTop="20dp"/>

    <Button
        android:id="@+id/swm_female"
        android:layout_width="100dp"
        android:layout_height="130dp"
        android:text="@string/swm_female"
        android:textColor="@color/swm_white"
        android:gravity="center"
        android:textSize="50dp"
        android:background="@drawable/swm_selectable_button"
        android:layout_alignParentRight="true"
        android:layout_marginRight="30dp"
        android:layout_below="@id/swm_gender_label"
        android:layout_marginTop="20dp"
        />

    <TextView
        android:id="@+id/swm_birthday_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/swm_birthday"
        android:textSize="20dp"
        android:textColor="@color/swm_white"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/swm_male"
        android:layout_marginTop="30dp"
        />
    <TextView
        android:id="@+id/swm_birthday"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="11dp"
        android:layout_below="@+id/swm_birthday_label"
        android:textSize="30dp"
        android:textColor="@color/swm_cta"
        android:layout_centerHorizontal="true"
        tools:text="1977/9/29"/>

    <Button
        android:id="@+id/swm_pick_day"
        android:layout_width="130dp"
        android:layout_height="50dp"
        android:background="@drawable/swm_cta_button"
        android:text="@string/swm_pick_day"
        android:textColor="@color/swm_white"
        android:textSize="20dp"
        android:layout_below="@id/swm_birthday"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:focusable="true"
        android:focusableInTouchMode="true"
        />

    <TextView
        android:id="@+id/swm_hint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/swm_gender_and_age_hint"
        android:textSize="20dp"
        android:textColor="@color/swm_descr"
        android:layout_centerHorizontal="true"
        android:layout_above="@id/swm_cta"
        android:layout_marginBottom="10dp" />
    <Button
        android:id="@+id/swm_cta"
        android:layout_width="230dp"
        android:layout_height="60dp"
        android:background="@drawable/swm_cta_button"
        android:text="@string/swm_cta_ok"
        android:textColor="@color/swm_white"
        android:textSize="30dp"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="10dp"
        />

</RelativeLayout>
