<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_body_info"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.swm.app.superrun.BodyInfoActivity"
    android:background="@drawable/swm_main">
    <TextView
        android:id="@+id/swm_height_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/swm_height"
        android:textColor="@color/swm_white"
        android:textSize="30dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"/>

    <LinearLayout
        android:id="@+id/swm_height_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/swm_height_label">

        <EditText
            android:id="@+id/swm_height_feet"
            android:layout_width="90dp"
            android:layout_height="40dp"
            android:background="@color/swm_white"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"/>
        <TextView
            android:id="@+id/swm_height_feet_unit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/swm_height_feet"
            android:textSize="30dp"
            android:textColor="@color/swm_white"
            android:layout_toRightOf="@id/swm_height_feet"
            android:layout_alignBottom="@id/swm_height_feet"
            android:layout_marginLeft="10dp"/>
        <EditText
            android:id="@+id/swm_height_inch"
            android:layout_width="90dp"
            android:layout_height="40dp"
            android:background="@color/swm_white"
            android:layout_below="@id/swm_height_label"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="10dp"
            android:layout_toRightOf="@id/swm_height_feet_unit"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/swm_height_inch"
            android:textSize="30dp"
            android:textColor="@color/swm_white"
            android:layout_toRightOf="@id/swm_height_inch"
            android:layout_alignBottom="@id/swm_height_feet"
            android:layout_marginLeft="10dp"/>
    </LinearLayout>
    <TextView
        android:id="@+id/swm_weight_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/swm_weight"
        android:textColor="@color/swm_white"
        android:textSize="30dp"
        android:layout_below="@id/swm_height_layout"
        android:layout_marginTop="30dp"
        android:layout_centerHorizontal="true"
        />
    <LinearLayout
        android:id="@+id/swm_weight_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@id/swm_weight_label"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp">
        <EditText
            android:id="@+id/swm_weight"
            android:layout_width="90dp"
            android:layout_height="40dp"
            android:background="@color/swm_white" />
        <TextView
            android:id="@+id/swm_weight_unit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/swm_weight_unit"
            android:textSize="30dp"
            android:textColor="@color/swm_white"
            android:layout_marginLeft="10dp"
            android:layout_gravity="bottom"/>
    </LinearLayout>
    <TextView
        android:id="@+id/swm_hint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/swm_body_info_hint"
        android:textSize="20dp"
        android:textColor="@color/swm_descr"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="100dp"
        />
    <Button
        android:id="@+id/swm_cta"
        android:layout_width="230dp"
        android:layout_height="70dp"
        android:background="@drawable/swm_cta_button"
        android:text="@string/swm_cta_go"
        android:textColor="@color/swm_white"
        android:textSize="30dp"
        android:layout_below="@id/swm_hint"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:layout_alignParentBottom="true"
        />
</RelativeLayout>
