<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_marginLeft="10dp"
    android:orientation="vertical">
    <ImageView
        android:id="@+id/swm_menu_icon"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:src="@drawable/swm_menu"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="5dp"
        />
    <LinearLayout
        android:id="@+id/swm_menu"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:orientation="vertical"
        android:background="@color/swm_menu_background"
        android:visibility="gone"
        tools:visibility="visible">
        <TextView
            android:id="@+id/swm_menu_ecg"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:text="@string/swm_menu_ecg_title"
            android:textSize="20dp"
            android:textColor="@color/swm_title"
            android:gravity="center_vertical"
            android:layout_margin="1dp"
            android:background="@drawable/swm_menu_item" />
        <TextView
            android:id="@+id/swm_menu_hrv"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:text="@string/swm_menu_hrv_title"
            android:textSize="20dp"
            android:textColor="@color/swm_title"
            android:gravity="center_vertical"
            android:layout_margin="1dp"
            android:background="@drawable/swm_menu_item"/>
        <TextView
            android:id="@+id/swm_menu_motion"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:text="@string/swm_menu_motion_title"
            android:textSize="20dp"
            android:textColor="@color/swm_title"
            android:gravity="center_vertical"
            android:layout_margin="1dp"
            android:background="@drawable/swm_menu_item"/>
        <TextView
            android:id="@+id/swm_menu_ble"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:text="@string/swm_menu_ble_title"
            android:textSize="20dp"
            android:textColor="@color/swm_title"
            android:gravity="center_vertical"
            android:layout_margin="1dp"
            android:background="@drawable/swm_menu_item"/>
    </LinearLayout>
</LinearLayout>