<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/swm_gyro_label"
            android:textSize="30dp"
            android:layout_gravity="center_horizontal"
            android:textColor="@color/swm_title"/>
        <TextView
            android:id="@+id/swm_gyro"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="(10,1,0)"
            android:textSize="20dp"
            android:layout_gravity="center_horizontal"
            android:textColor="@color/swm_word"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/swm_acc_label"
            android:textSize="30dp"
            android:layout_gravity="center_horizontal"
            android:textColor="@color/swm_title"
            android:layout_marginTop="20dp"/>
        <TextView
            android:id="@+id/swm_accelerator"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="(10,1,0)"
            android:textSize="20dp"
            android:layout_gravity="center_horizontal"
            android:textColor="@color/swm_word"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/swm_mag_label"
            android:textSize="30dp"
            android:layout_gravity="center_horizontal"
            android:textColor="@color/swm_title"
            android:layout_marginTop="20dp"/>
        <TextView
            android:id="@+id/swm_magnetic"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="(10,1,0)"
            android:textSize="20dp"
            android:layout_gravity="center_horizontal"
            android:textColor="@color/swm_word"
            />
    </LinearLayout>

    <Button
        android:id="@+id/swm_record"
        android:layout_height="60dp"
        android:layout_width="match_parent"
        android:layout_alignParentBottom="true"
        android:background="@drawable/swm_cta_button"
        android:layout_marginRight="7dp"
        android:layout_marginLeft="7dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:text="@string/swm_record"
        android:textSize="25dp"
        android:textColor="@color/swm_cta_button_text"
        />
</RelativeLayout>