<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/swm_main"
    tools:context="com.swm.heart.SplashActivity">

    <RelativeLayout
        android:id="@+id/fullscreen_content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:keepScreenOn="true"
        >
        <TextView
            android:id="@+id/swm_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/swm_super_run"
            android:textColor="@color/swm_white"
            android:textSize="36dp"
            android:layout_centerInParent="true" />
        <TextView
            android:id="@+id/swm_sub_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/swm_super_run_sub"
            android:textColor="@color/swm_descr"
            android:textSize="20dp"
            android:layout_below="@id/swm_title"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="5dp"/>
        <com.google.android.gms.common.SignInButton
            android:id="@+id/sign_in_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/swm_title"
            android:layout_marginTop="45dp"
            android:visibility="invisible"
            />
        <Button
            android:id="@+id/swm_cta"
            android:layout_width="130dp"
            android:layout_height="50dp"
            android:background="@drawable/swm_cta_button"
            android:text="@string/swm_cta_go"
            android:textColor="@color/swm_white"
            android:textSize="24dp"
            android:layout_below="@id/swm_title"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="150dp"
            android:visibility="invisible"
            />
        <TextView
            android:id="@+id/swm_skip"
            android:layout_width="70dp"
            android:layout_height="30dp"
            android:text="@string/swm_skip"
            android:textColor="@color/swm_white"
            android:textSize="16dp"
            android:layout_below="@id/swm_cta"
            android:gravity="center"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="150dp"
            android:visibility="visible"
            />
    </RelativeLayout>

    <!-- This FrameLayout insets its children based on system windows using
         android:fitsSystemWindows. -->
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true">

    </FrameLayout>

</FrameLayout>
