<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <FrameLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/swm_heart_layout"
        android:layout_marginTop="10dp"
        >
        <com.swm.app.superrun.power.SwmMeter
            android:id="@+id/swm_run_power_meter"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:elevation="1dp"
            android:translationZ="2dp"
            app:innerCircleWidth="@dimen/swm_width_device_status"
            app:innerCircleColor="@color/swm_device_status_unconnect"
            app:innerCircleRadius="@dimen/swm_main_device_circle_radius"
            app:outerCircleWidth="@dimen/swm_width_run_power"
            app:outerCircleColor="@color/swm_run_power_poor"
            app:outerCircleRadius="@dimen/swm_power_circle_radius"
            app:secondWidth="@dimen/swm_second_width"
            app:secondRadius="@dimen/swm_second_radius"
            app:secondValueSize="@dimen/swm_second_value_size"
            app:secondTextSize="@dimen/swm_second_text_size"
            app:secondText="@string/swm_heart"
            app:secondTextColor="@color/swm_white"/>
        />
        <TextView
            android:id="@+id/swm_run_power"
            android:layout_gravity="center_horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="100"
            android:text="@string/swm_unknow_power"
            android:textColor="@color/swm_run_power_poor"
            android:textSize="60dp"
            android:layout_marginTop="70dp"
            android:elevation="1dp"
            android:translationZ="2dp"/>
        <TextView
            android:layout_gravity="center_horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/swm_run_power"
            android:textColor="@color/swm_white"
            android:textSize="20dp"
            android:layout_marginTop="150dp"
            android:elevation="1dp"
            android:translationZ="2dp"/>
    </FrameLayout>
</RelativeLayout>